# minimal_cmake_example

./: CMakeLists.txt  Dockerfile
gui/: CMakeLists.txt  gui.cpp
main/: CMakeLists.txt
main/src/: main.cpp
src/main/: main.cpp
test/: CMakeLists.txt
